@@ -19,7 +19,8 @@ ns			A	10.53.0.4
 $TTL 5
 to-be-removed 		NS	ns.to-be-removed
 ns.to-be-removed	A	10.53.0.6
-fetch	10		TXT	A short ttl
+fetch.tld.		NS	ns.fetch.tld.
+ns.fetch.tld.		A	10.53.0.6
 no-edns-version.tld.	NS	ns.no-edns-version.tld.
 ns.no-edns-version.tld.	A	10.53.0.6
 edns-version.tld.	NS	ns.edns-version.tld.
