@@ -16,7 +16,8 @@ $TTL 300
 				)
 @			NS	ns.tld.
 ns			A	10.53.0.4
-fetch  10              TXT     A short ttl
+fetch.tld.		NS	ns.fetch.tld.
+ns.fetch.tld.		A	10.53.0.6
 fetchall  10              TXT     A short ttl
 fetchall  10              A     1.2.3.4
 fetchall  10              AAAA    ::1
