@@ -68,3 +68,8 @@ zone "delegation-only" {
 	type master;
 	file "delegation-only.db";
 };
+
+zone "fetch.tld" {
+	type master;
+	file "fetch.tld.db";
+};
